--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.3",
+    "aurelia-store": "^1.6.0",
     "pouchdb-browser": "^7.2.2",
     "pouchdb-find": "^7.2.2",
+    "rxjs": "^6.6.3",
     "uikit": "^3.5.8"
   },
   "devDependencies": {
